--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,8 @@
 @import "blocks/header-controls";
 @import "blocks/index-banner";
 @import "blocks/register";
+@import "blocks/services";
+@import "blocks/who-online";
+@import "blocks/who-we";
+@import "blocks/new-users";
+@import "blocks/tru-store";
