--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,6 @@
 @import "blocks/who-we";
 @import "blocks/new-users";
 @import "blocks/tru-store";
+@import "blocks/learn-more";
+@import "blocks/footer";
+@import "blocks/footer-navigation";
