--- a/source/sass/blocks/_our-services.scss
+++ b/source/sass/blocks/_our-services.scss
@@ -1,16 +1,16 @@
-.services {
+.our-services {
   padding: 20px;
   min-height: 500px;
 }
 
-.services__title {
+.our-services__title {
   font-weight: 600;
   font-size: 35px;
   line-height: 43px;
 }
 
 @media (min-width: 768px) {
-  .services {
+  .our-services {
     padding: 50px;
   }
 }
