--- a/source/sass/blocks/_header.scss
+++ b/source/sass/blocks/_header.scss
@@ -22,6 +22,7 @@
 @media (min-width: 1024px) {
   .header {
     @include container;
+    max-width: 1600px;
     justify-content: flex-start;
     align-items: center;
     padding: 50px;
