--- a/source/sass/blocks/_register.scss
+++ b/source/sass/blocks/_register.scss
@@ -2,8 +2,17 @@
   max-width: 330px;
   margin: auto;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(1px);
+
+  &--services {
+    padding-bottom: 50px;
+    max-width: none;
+
+    .register__title {
+      text-align: center;
+    }
+  }
 }
 
 .register__title {
@@ -64,6 +73,15 @@
   &:active {
     background-color: darken(#FF4949, 10%);
   }
+}
+
+.register__wrapper {
+  max-width: 360px;
+  margin: 30px auto 0;
+}
+
+.register__description {
+  text-align: center;
 }
 
 @media (min-width: 768px) {
