--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,7 +8,7 @@
 @import "blocks/header-controls";
 @import "blocks/index-banner";
 @import "blocks/register";
-@import "blocks/services";
+@import "blocks/our-services";
 @import "blocks/who-online";
 @import "blocks/who-we";
 @import "blocks/new-users";
@@ -16,3 +16,4 @@
 @import "blocks/learn-more";
 @import "blocks/footer";
 @import "blocks/footer-navigation";
+@import "blocks/service";
