--- a/source/sass/blocks/_register.scss
+++ b/source/sass/blocks/_register.scss
@@ -5,7 +5,7 @@
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(1px);
 
-  &--services {
+  &--full-width {
     padding-bottom: 50px;
     max-width: none;
 
