--- a/source/sass/blocks/_faq.scss
+++ b/source/sass/blocks/_faq.scss
@@ -18,7 +18,6 @@
   }
 }
 
-
 .faq__nav-list {
   @include list;
 }
@@ -50,37 +49,12 @@
   }
 }
 
-
-
-
-
 .faq__list {
   @include list;
-  display: flex;
 }
 
-.faq__item-title {
-  position: relative;
-  text-align: center;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    margin-left: -33px;
-    width: 0;
-    height: 3px;
-    background-color: #52BFFF;
-    transition: 0.3s ease;
-  }
-}
 
 .faq__item {
-  min-width: 100%;
   display: none;
 
   &--active {
@@ -102,6 +76,16 @@
   }
 }
 
+.faq__category {
+  font-weight: 500;
+  padding-right: 30px;
+  background-image: url("../img/arrow-down.png");
+  background-repeat: no-repeat;
+  background-position: center right;
+  max-width: fit-content;
+  cursor: pointer;
+}
+
 @media (min-width: 768px) {
   .faq__content {
     @include container;
@@ -118,8 +102,13 @@
     background-position: bottom right;
   }
 
-  .faq__list {
+  .faq__nav-list {
     display: flex;
-    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+  .faq__nav-item {
+    margin-right: 30px;
+    cursor: pointer;
   }
 }
